[gd_scene load_steps=4 format=3 uid="uid://csp3sn1jfrc4q"]

[ext_resource type="Script" path="res://scenes and scripts/ui.gd" id="1_qcsck"]
[ext_resource type="PackedScene" uid="uid://mshkucx6t227" path="res://scenes and scripts/health_display.tscn" id="2_cx6hi"]
[ext_resource type="PackedScene" uid="uid://dlra1pyn3q201" path="res://scenes and scripts/pause_menu.tscn" id="7_1veam"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_qcsck")

[node name="TopContainer" type="MarginContainer" parent="."]
offset_right = 296.0
offset_bottom = 90.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HealthDisplay" parent="TopContainer" instance=ExtResource("2_cx6hi")]
layout_mode = 2

[node name="BottomContainer" type="MarginContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -114.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="AmmoDisplay" type="Label" parent="BottomContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 48
text = "18 / 18"
horizontal_alignment = 2
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PauseMenu" parent="." instance=ExtResource("7_1veam")]

[connection signal="main_menu_requested" from="PauseMenu" to="." method="_on_pause_menu_main_menu_requested"]
[connection signal="quit_requested" from="PauseMenu" to="." method="_on_pause_menu_quit_requested"]
[connection signal="resume_requested" from="PauseMenu" to="." method="_on_pause_menu_resume_requested"]
